syntax = "proto3";

package konnex;

option go_package = "./;konnex";

service AuthService {
    rpc Identify(UserID) returns (UserIdentity) {}
    rpc Authorize(Token) returns (AuthorizeRes) {}
}

message UserID {
    string value = 1;
}

message Token {
    string value = 1;
}

message UserIdentity {
    string id = 1;
    string username = 2;
}

message AuthorizeRes{
    string token = 1;
    string userID = 2;
}